--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -20,4 +20,4 @@
   ga('send', 'pageview');
 
 </script>
-<span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+<span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the Minimal Mistakes theme.</span>
