--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,14 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}	   
- 
+ <script src="path/to/jquery.min.js"></script>
+<script src="path/to/jquery.fitvids.js"></script>
+<script>
+  $(document).ready(function(){
+    // Target your .container, .wrapper, .post, etc.
+    $("#thing-with-videos").fitVids();
+  });
+</script>
 
 </body>
 </html>
