--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,7 +75,7 @@
 <script src="path/to/jquery.fitvids.js"></script>
 <script>
   $(document).ready(function(){
-    // Target your .container, .wrapper, .post, etc.
+    YouTube// Target your .container, .wrapper, .post, etc.
     $("#thing-with-videos").fitVids();
   });
 </script>
