--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,7 @@
         <h1><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a></h1>
       {% endif %}
     </div><!--/ .headline-wrap -->
+    {% if page.share != false %}{% include social-share.html %}{% endif %}
     <div class="article-wrap">
       {{ content }}
       <hr />
