--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -33,7 +33,8 @@
 </div>
 
 <div id="index">
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title }} <h1>
+  <h3>{{ page.excerpt }}</h3>
   {% for post in site.english-please %}  
   {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
