--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -34,7 +34,7 @@
 
 <div id="index">
   <h1>{{ page.title }}</h1>
-  {% for post in site.posts[IT] %}  
+  {% for post in site.categories[TI] %}  
   {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
     {% else %}
