--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -7,7 +7,7 @@
 {% include _head.html %}
 </head>
 
-<body class="post-index-eng">
+<body class="post-index">
 
 {% include _browser-upgrade.html %}
 
@@ -34,8 +34,8 @@
 
 <div id="index">
   <h1>{{ page.title }}</h1>
-   {% for post in site.english-please %}
- {% unless post.next %}
+  {% for post in site.posts %}  
+  {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
     {% else %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
