--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -34,7 +34,7 @@
 
 <div id="index">
   <h1>{{ page.title }}</h1>
-  {% for post in site.english-please %}  
+  {% for post in site.posts %}  
   {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
     {% else %}
@@ -45,6 +45,13 @@
       {% endif %}
     {% endunless %}
     <article>
+      {% if post.categories contains 'english-please' %}
+	<div class="post">
+		<h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		<p class="meta">Date: {{ post.date }}</p>
+		<div class="entry">
+			{{ post.content | strip_html | truncatewords: 100 }}
+		</div>
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
       {% else %}
