--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -35,7 +35,7 @@
 <div id="index">
   <h1>{{ page.title }}</h1>
   {% for post in site.posts %}  
-   {% if post.categories contains 'english-please' %}
+   {% if post.categories contains 'it' %}
   {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
     {% else %}
