--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -34,17 +34,15 @@
 
 <div id="index">
   <h1>{{ page.title }}</h1>
- {% for post in site.posts %}
-  {% if post.categories contains 'english-please' %}
-    <article>
-      {% if post.link %}
-        <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
-      {% else %}
-        <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-        <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-      {% endif %}
-    </article>
-  {% endfor %}
+{% for post in site.posts %}
+  {% if post.categories contains 'it' %}
+	<div class="post">
+		<h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		<p class="meta">Date: {{ post.date }}</p>
+		<div class="entry">
+			{{ post.content | strip_html | truncatewords: 100 }}
+		</div>
+	</div>
   {% endif %}
 {% endfor %}
 </div><!-- /#index -->
