--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -37,11 +37,12 @@
 {% for post in site.posts %}
   {% if post.categories contains 'it' %}
 	<div class="post">
+	<h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+        <div class="entry">
+        <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
+        </div>
 		<h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
 		<p class="meta">Date: {{ post.date }}</p>
-		<div class="entry">
-			{{ post.content | strip_html | truncatewords: 100 }}
-		</div>
 	</div>
   {% endif %}
 {% endfor %}
