--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -36,6 +36,7 @@
   <h1>{{ page.title }}</h1>
 {% for post in site.posts %}
   {% if post.categories contains 'it' %}
+  <article>
 	<div class="post">
 	<h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
         <div class="entry">
@@ -44,6 +45,7 @@
 		<h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
 		<p class="meta">Date: {{ post.date }}</p>
 	</div>
+	</article>
   {% endif %}
 {% endfor %}
 </div><!-- /#index -->
