--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -35,7 +35,7 @@
 <div id="index">
   <h1>{{ page.title }}</h1>
 {% for post in site.posts %}
-  {% if post.categories contains 'it' %}
+  {% if post.categories contains 'english-please' %}
   <article>
 	<div class="post">
 	<h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
