--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -34,18 +34,29 @@
 
 <div id="index">
   <h1>{{ page.title }}</h1>
-{% for post in site.posts %}
+  {% for post in site.posts %}  
+  {% unless post.next %}
+    <h3>{{ post.date | date: '%Y' }}</h3>
+    {% else %}
+      {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+      {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+      {% if year != nyear %}
+        <h3>{{ post.date | date: '%Y' }}</h3>
+      {% endif %}
+    {% endunless %}
+    <article>
   {% if post.categories contains 'en' %}
-  <article>
-	<div class="post">
-	<h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-        <div class="entry">
+      {% if post.link %}
+        <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
+      {% else %}
+        <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
         <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-        </div>
-	</div>
-	</article>
-  {% endif %}
-{% endfor %}
+      {% endif %}
+      {% endif %}
+    </article>
+    
+  {% endfor %}
+  
 </div><!-- /#index -->
 
 <div class="footer-wrap">
