--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -45,7 +45,7 @@
       {% endif %}
     {% endunless %}
     <article>
-  {% if post.categories != 'en' %}
+  {% if post.categories not contains 'en' %}
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
       {% else %}
