--- a/_layouts/post-index-eng.html
+++ b/_layouts/post-index-eng.html
@@ -34,6 +34,7 @@
 
 <div id="index">
   <h1>{{ page.title }}</h1>
+  <h4>{{ page.excerpt}}</h4>
   {% for post in site.posts %}  
   {% unless post.next %}
     <h3>{{ post.date | date: '%Y' }}</h3>
