--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,8 +56,8 @@
     <section id="disqus_thread"></section><!-- /#disqus_thread -->
   {% endif %}
   
-<div class="btn-group btn-group-justified">
-	<a class="btn-success" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | replace:'index.html','' | prepend: site.url }}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>  Facebook</a>
+<div class="btn-group btn-group-justified btn-group-lg">
+	<a class="btn-primary" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | replace:'index.html','' | prepend: site.url }}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>  Facebook</a>
 	<a class="btn-info" href="https://twitter.com/intent/tweet?text={{ page.title | escape | replace:' ','%20' }}&amp;url={{ page.url | replace:'index.html','' | prepend: site.url }}&amp;via={{ site.owner.twitter }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
 	<a class="btn-danger"  href="https://plus.google.com/share?url={{ page.url | replace:'index.html','' | prepend: site.url }}" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i>  Google+</a>
 </div><!-- /.share-this -->
