--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@
       </footer>
     </div><!-- /.article-wrap -->
 <div class="btn-group btn-group-justified">
-	<a class="btn btn-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | replace:'index.html','' | prepend: site.url }}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>  Facebook</a>
+	<a class="btn-social btn-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | replace:'index.html','' | prepend: site.url }}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>  Facebook</a>
 	<a class="btn btn-info" href="https://twitter.com/intent/tweet?text={{ page.title | escape | replace:' ','%20' }}&amp;url={{ page.url | replace:'index.html','' | prepend: site.url }}&amp;via={{ site.owner.twitter }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
 	<a class="btn btn-danger"  href="https://plus.google.com/share?url={{ page.url | replace:'index.html','' | prepend: site.url }}" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i>  Google+</a>
 </div><!-- /.share-this -->
