--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include _head.html %}
+{% include _open-graph.html %}
 
 </head>
 
