--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,5 +1,7 @@
+ </div>
+  <h4>Share if You care!</h4>
+  </div><!-- /.article-wrap -->
 <div class="social-share">
-Share if you care!
   <ul class="socialcount socialcount-small inline-list">
     <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook"><span class="count"><i class="fa fa-facebook-square"></i> Facebook</span></a></li>
     <li class="twitter"><a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" title="Share on Twitter"><span class="count"><i class="fa fa-twitter-square"></i> Twitter </span></a></li>
