--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@
 {% include _head.html %}
 {% include _open-graph.html %}
 
+    <link href="{{ site.url }}/atom.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Atom Feed">
+    <link href="{{ site.url }}/sitemap.xml" type="application/xml" rel="sitemap" title="Sitemap">
+
 </head>
 
 <body class="post">
