--- a/_includes/_open-graph.html
+++ b/_includes/_open-graph.html
@@ -12,7 +12,7 @@
 {% endif %}
 <!-- Open Graph -->
 
-<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-{% if page.excerpt %}<meta property="og:description" content="{{ page.excerpt | strip_html }}">{% endif %}
-<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
-<meta property="og:site_name" content="{{ site.title }}">
+<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
+{% if page.excerpt %}<meta property="og:description" content="{{ page.excerpt | strip_html }}"/>{% endif %}
+<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}"/>
+<meta property="og:site_name" content="{{ site.title }}"/>
