--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -6,6 +6,8 @@
   {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %}
 {% endif %}
 
+<meta name="google-translate-customization" content="1ff4fb082f7c7a7c-2558cc3216bd0c3c-g3e449320aca7a468-e"></meta>
+
 {% include _open-graph.html %}
 
 {% if site.owner.google.verify %}<!-- Webmaster Tools verfication -->
